[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/LevelManager.gd" type="Script" id=1]
[ext_resource path="res://resources/Type Machine.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://images/check_mark.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 2 )

[node name="LevelSelectionScreen" type="Node"]
script = ExtResource( 1 )

[node name="lvl1" type="Button" parent="." groups=["lvlButtons"]]
margin_left = 64.0
margin_top = 264.0
margin_right = 320.0
margin_bottom = 392.0
custom_fonts/font = SubResource( 1 )
text = "DEMO"

[node name="lvl2" type="Button" parent="." groups=["lvlButtons"]]
margin_left = 448.0
margin_top = 264.0
margin_right = 704.0
margin_bottom = 392.0
custom_fonts/font = SubResource( 1 )
text = "LEVEL 2"

[node name="lvl3" type="Button" parent="." groups=["lvlButtons"]]
margin_left = 832.0
margin_top = 256.0
margin_right = 1088.0
margin_bottom = 384.0
custom_fonts/font = SubResource( 1 )
text = "LEVEL 3"

[node name="lvl4" type="Button" parent="." groups=["lvlButtons"]]
margin_left = 1216.0
margin_top = 264.0
margin_right = 1472.0
margin_bottom = 392.0
custom_fonts/font = SubResource( 1 )
text = "LEVEL 4"

[node name="lvl5" type="Button" parent="." groups=["lvlButtons"]]
margin_left = 1600.0
margin_top = 264.0
margin_right = 1856.0
margin_bottom = 392.0
custom_fonts/font = SubResource( 1 )
text = "LEVEL 5"

[node name="lvl6" type="Button" parent="." groups=["lvlButtons"]]
margin_left = 64.0
margin_top = 712.0
margin_right = 320.0
margin_bottom = 840.0
custom_fonts/font = SubResource( 1 )
text = "LEVEL 6"

[node name="lvl7" type="Button" parent="." groups=["lvlButtons"]]
margin_left = 448.0
margin_top = 712.0
margin_right = 704.0
margin_bottom = 840.0
custom_fonts/font = SubResource( 1 )
text = "LEVEL 7"

[node name="lvl8" type="Button" parent="." groups=["lvlButtons"]]
margin_left = 832.0
margin_top = 704.0
margin_right = 1088.0
margin_bottom = 832.0
custom_fonts/font = SubResource( 1 )
text = "LEVEL 8"

[node name="lvl9" type="Button" parent="." groups=["lvlButtons"]]
margin_left = 1216.0
margin_top = 712.0
margin_right = 1472.0
margin_bottom = 840.0
custom_fonts/font = SubResource( 1 )
text = "LEVEL 9"

[node name="lvl10" type="Button" parent="." groups=["lvlButtons"]]
margin_left = 1600.0
margin_top = 712.0
margin_right = 1856.0
margin_bottom = 840.0
custom_fonts/font = SubResource( 1 )
text = "LEVEL 10"

[node name="X" type="Button" parent="."]
margin_left = 1792.0
margin_top = 64.0
margin_right = 1856.0
margin_bottom = 128.0
custom_fonts/font = SubResource( 2 )
text = "X"

[node name="CheckMark1" type="Sprite" parent="." groups=["checks"]]
position = Vector2( 336, 256 )
scale = Vector2( 0.244, 0.244 )
texture = ExtResource( 3 )

[node name="CheckMark2" type="Sprite" parent="." groups=["checks"]]
position = Vector2( 720, 256 )
scale = Vector2( 0.244, 0.244 )
texture = ExtResource( 3 )

[node name="CheckMark3" type="Sprite" parent="." groups=["checks"]]
position = Vector2( 1048, 432 )
scale = Vector2( 0.244, 0.244 )
texture = ExtResource( 3 )
offset = Vector2( 229.507, -754.098 )

[node name="CheckMark4" type="Sprite" parent="." groups=["checks"]]
position = Vector2( 1488, 256 )
scale = Vector2( 0.244, 0.244 )
texture = ExtResource( 3 )

[node name="CheckMark5" type="Sprite" parent="." groups=["checks"]]
position = Vector2( 1872, 256 )
scale = Vector2( 0.244, 0.244 )
texture = ExtResource( 3 )

[node name="CheckMark6" type="Sprite" parent="." groups=["checks"]]
position = Vector2( -152, 384 )
scale = Vector2( 0.244, 0.244 )
texture = ExtResource( 3 )
offset = Vector2( 2000, 1311.48 )

[node name="CheckMark7" type="Sprite" parent="." groups=["checks"]]
position = Vector2( 232, 384 )
scale = Vector2( 0.244, 0.244 )
texture = ExtResource( 3 )
offset = Vector2( 2000, 1311.48 )

[node name="CheckMark8" type="Sprite" parent="." groups=["checks"]]
position = Vector2( 616, 384 )
scale = Vector2( 0.244, 0.244 )
texture = ExtResource( 3 )
offset = Vector2( 2000, 1311.48 )

[node name="CheckMark9" type="Sprite" parent="." groups=["checks"]]
position = Vector2( 1000, 392 )
scale = Vector2( 0.244, 0.244 )
texture = ExtResource( 3 )
offset = Vector2( 2000, 1311.48 )

[node name="CheckMark10" type="Sprite" parent="." groups=["checks"]]
position = Vector2( 1384, 392 )
scale = Vector2( 0.244, 0.244 )
texture = ExtResource( 3 )
offset = Vector2( 2000, 1311.48 )

[connection signal="pressed" from="lvl1" to="." method="_on_lvl1_pressed"]
[connection signal="pressed" from="lvl2" to="." method="_on_lvl2_pressed"]
[connection signal="pressed" from="lvl3" to="." method="_on_lvl3_pressed"]
[connection signal="pressed" from="lvl4" to="." method="_on_lvl4_pressed"]
[connection signal="pressed" from="lvl5" to="." method="_on_lvl5_pressed"]
[connection signal="pressed" from="lvl6" to="." method="_on_lvl6_pressed"]
[connection signal="pressed" from="lvl7" to="." method="_on_lvl7_pressed"]
[connection signal="pressed" from="lvl8" to="." method="_on_lvl8_pressed"]
[connection signal="pressed" from="lvl9" to="." method="_on_lvl9_pressed"]
[connection signal="pressed" from="lvl10" to="." method="_on_lvl10_pressed"]
[connection signal="pressed" from="X" to="." method="_on_X_pressed"]
